--- a/src/css/_panel.scss
+++ b/src/css/_panel.scss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden; // Only hide horizontal overflow
+  overflow-y: visible; // Allow content to show properly
   
   &::before {
     content: '';
